--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Garage Sales App</string>
+    <string name="mi_add_event">Add Event</string>
+    <string name="mi_show_map">Show Map</string>
+    <string name="mi_prefs">Settings</string>
 </resources>
